fix row gap in form-flex

--- a/src/main/webapp/static/sc2.css
+++ b/src/main/webapp/static/sc2.css
@@ -1943,6 +1943,12 @@ a.unstyled, a.unstyled:hover
     {
         justify-content: start !important;
     }
+
+    .form-flex .form-group
+    {
+        margin-bottom: 0;
+    }
+
 }
 
 @media (max-width: 310px) {
